<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/lbl_profil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lbl_count_postingan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_count_postingan"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lbl_profil"
        app:layout_constraintTop_toTopOf="@+id/lbl_profil"
        tools:text="16" />

    <TextView
        android:id="@+id/lbl_postingan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/lbl_postingan"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/lbl_profil"
        app:layout_constraintTop_toBottomOf="@+id/lbl_count_postingan" />

    <TextView
        android:id="@+id/lbl_count_pengikut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_count_pengikut"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/lbl_count_postingan"
        app:layout_constraintTop_toTopOf="@+id/lbl_profil" />

    <TextView
        android:id="@+id/lbl_pengikut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/lbl_pengikut"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/lbl_postingan"
        app:layout_constraintTop_toBottomOf="@+id/lbl_count_pengikut" />

    <TextView
        android:id="@+id/lbl_count_mengikuti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_count_mengikuti"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/lbl_count_pengikut"
        app:layout_constraintTop_toTopOf="@+id/lbl_profil" />

    <TextView
        android:id="@+id/lbl_mengikuti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/lbl_mengikuti"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/lbl_pengikut"
        app:layout_constraintTop_toBottomOf="@+id/lbl_count_mengikuti" />

    <TextView
        android:id="@+id/lbl_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_nama"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_profil"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lbl_kategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/lbl_kategori"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_nama" />

    <TextView
        android:id="@+id/lbl_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/lbl_bio"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_kategori" />

    <TextView
        android:id="@+id/lbl_bio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/lbl_bio1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_bio" />

    <Button
        android:id="@+id/btn_ikuti"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_ikuti"
        android:textStyle="bold"
        app:backgroundTint="#2196F3"
        app:cornerRadius="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_bio1" />

    <Button
        android:id="@+id/btn_kirim_pesan"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_kirim_pesan"
        android:textColor="@color/black"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="7dp"
        app:layout_constraintStart_toEndOf="@+id/btn_ikuti"
        app:layout_constraintTop_toBottomOf="@+id/lbl_bio1" />


</androidx.constraintlayout.widget.ConstraintLayout>